# climbing-scheduler

./: .gitignore  climbing-scheduler.cabal  devloop.js  readme.md  stack.yaml
db/: CreateDb.sql  Dockerfile  build.sh  initDb.sh  startDb.sh
javascript/: elm-package.json  package.json  webpack.config.js
javascript/src/Native/: Navigation.js
javascript/src/home/: Home.elm  home.js
javascript/src/user/: AddEventMenu.elm  User.elm  User.js
src/: Db.hs  Http.hs  Login.hs  Main.hs  Session.hs  Slots.hs  Users.hs  application.conf
static/: .snyk  bower.json  home.html  index.html  package.json  webpack.config.js
static/css/: app.css
static/src/: Main.js  Main.purs
