
name:                climbing-scheduler
version:             0.0.0.1
-- synopsis:
-- description:
-- license:
license-file:        LICENSE
author:              adelegue
maintainer:          aadelegue@gmail.com
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable hblog
  ghc-options: -O3 -threaded -rtsopts "-with-rtsopts=-N8 -A32m"
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base
                     , time
                     , uuid
                     , scotty
                     , bytestring
                     , text
                     , postgresql-simple
                     , aeson
                     , uuid-aeson
                     , HTTP
                     , http-types
                     , transformers
                     , wai
                     , wai-middleware-static
                     , wai-extra
                     , resource-pool
                     , configurator
                     , MissingH


  hs-source-dirs:      src
  default-language:    Haskell2010
