
name:                climbing-scheduler
version:             0.0.0.1
-- synopsis:
-- description:
author:              adelegue
maintainer:          aadelegue@gmail.com
-- copyright:
category: Web 
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable spock-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

  -- other-modules:
  -- other-extensions:
  build-depends:       base
                     , mtl
                     , either
                     , time
                     , uuid
                     , scotty
                     , bytestring
                     , text
                     , postgresql-simple
                     , aeson
                     , uuid-aeson
                     , HTTP
                     , http-types
                     , cookie
                     , Crypto
                     , base64-bytestring
                     , blaze-builder
                     , transformers
                     , wai
                     , wai-middleware-static
                     , wai-extra
                     , resource-pool
                     , configurator
                     , MissingH

  default-language:    Haskell2010
